# rigid-body-simulation

./: .clang_complete  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/Modules/: FindOpenCL.cmake
demo/: Demo.cpp
doc/: .gitignore  Makefile  dokumentace.tex  gmu.tex  titlepage.tex
measure/: measure.sh
oclUtils/: openCLUtilities.hpp
qu3e/: .gitignore  CMakeLists.txt
qu3e/kernels/: functions.cl  q3ContactManagerOcl.cl  q3ContactSolverOcl.cl  types.cl
qu3e/oclUtils/: CMakeLists.txt  histogram-pyramids.cpp  openCLUtilities.cpp  openCLUtilities.hpp
qu3e/scripts/: fileToString
qu3e/src/: CMakeLists.txt  q3.h
qu3e/src/broadphase/: q3BroadPhase.cpp  q3BroadPhase.h  q3DynamicAABBTree.cpp  q3DynamicAABBTree.h
qu3e/src/collision/: q3Box.cpp  q3Box.h  q3Box.inl  q3Collide.cpp  q3Collide.h
qu3e/src/common/: q3Geometry.cpp  q3Geometry.h  q3Memory.cpp  q3Memory.h  q3OpenCL.h  q3Settings.h  q3Types.h
qu3e/src/debug/: q3Render.h  q3Timers.cpp  q3Timers.h
qu3e/src/dynamics/: q3Body.cpp  q3Body.h  q3Contact.cpp  q3Contact.h  q3ContactManager.cpp  q3ContactManager.h  q3ContactManagerOcl.cpp  q3ContactManagerOcl.h  q3ContactSolver.h  q3ContactSolverCpu.cpp  q3ContactSolverCpu.h  q3ContactSolverOcl.cpp  q3ContactSolverOcl.h  q3Island.cpp  q3Island.h  q3IslandSolver.h  q3IslandSolverCpu.cpp  q3IslandSolverCpu.h  q3IslandSolverOcl.cpp  q3IslandSolverOcl.h
qu3e/src/math/: q3Mat3.cpp  q3Mat3.h  q3Math.h  q3Quaternion.cpp  q3Quaternion.h  q3Transform.h  q3Vec3.cpp  q3Vec3.h
qu3e/src/scene/: q3Container.cpp  q3Container.h  q3Scene.cpp  q3Scene.h
shaders/: debug-shader.frag  debug-shader.vert  shader.frag  shader.vert
src/: BaseShaderProgram.cpp  BaseShaderProgram.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ComputeShaderProgram.cpp  ComputeShaderProgram.hpp  DebugRenderer.cpp  DebugRenderer.hpp  Exceptions.hpp  IEventListener.hpp  IProcessor.hpp  IRegisterable.hpp  IRenderer.hpp  Main.cpp  Main.hpp  RegistrablesContainer.cpp  RegistrablesContainer.hpp  RenderShaderProgram.cpp  RenderShaderProgram.hpp  Scene.cpp  Scene.hpp
src/dynamics/: q3ContactSolverCpu.cpp  q3ContactSolverCpu.h  q3ContactSolverGpu.cpp  q3ContactSolverGpu.h  q3ContactSolverOcl.cl  q3ContactSolverOcl.cpp  q3ContactSolverOcl.h  q3Island.cpp  q3Island.h
src/math/: q3Vec3.h
src/scene/: q3Scene.cpp
